2010-02-02  Deepak Bhole <dbhole@redhat.com>

	* plugin/tests/LiveConnect/PluginTest.java
	(jjsEvalTest): New function. Calls JSObject.eval() with given string.
	* plugin/tests/LiveConnect/common.js: Added eval test suite as one of the
	run options.
	* plugin/tests/LiveConnect/index.html: Same.
	* plugin/tests/LiveConnect/jjs_eval_test.js: Eval tests.

2010-02-02  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java: Re-designed frame
	embedding code so that the applet is dynamically packed into given handle.

2010-02-01  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Use sharkContext::module
	instead of sharkContext::module_provider when using LLVM 2.7
	to handle LLVM r94686 API change.
	* ports/hotspot/src/share/vm/shark/sharkContext.hpp
	(sharkContext::module): Made public when using LLVM 2.7.
	(sharkContext::module_provider): Undefine when using LLVM 2.7.
	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp
	(llvm/ModuleProvider.h): Undefine when using LLVM 2.7.

2010-05-19 Andrew John Hughes  <ahughes@redhat.com>

	Patch splashscreen to build against libpng 1.4.
	* Makefile.am:
	Bump JDK changeset and SHA256 sum.

2010-01-26 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/plugin-tests.stamp): Add
	a target for building the plugin tests.
	(plugin-tests): Alias for the above.
	
2010-01-27  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Remove quoting from ICEDTEA_NAME ICEDTEA_REV ICEDTEA_PKG.

2010-01-25 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove trailing space after IcedTea version
	in plugin version information when package
	version is not set.
	
2010-05-18 Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/scanner-charsets.patch:
	Patch openjdk-boot not openjdk.

2010-05-17 Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/icedtea-dbcs.patch,
	* patches/boot/icedtea-sbcs.patch,